Avoid possible null pointer dereferencing. Fixes PR kern/52225.